# mpm

./: Cargo.toml  README.md
src/: downloader.rs  install.rs  main.rs  package.rs  upgrade.rs
src/package/: bash.rs  recipe.rs  stuff.rs
