[package]
name = "mpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "3.0.0-beta.5"
default-features = false
features = ["std", "suggestions", "unicode"]

[dependencies.futures-util]
version = "0.3.18"

[dependencies.hex]
version = "0.4.3"

[dependencies.indicatif]
version = "0.16.2"

[dependencies.reqwest]
version = "0.11.7"
features = ["stream"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.serde_yaml]
version = "0.8.21"

[dependencies.sha2]
version = "0.9.8"

[dependencies.tokio]
version = "1.14.0"
features = ["full"]

[dependencies.url]
version = "2.2.2"
